--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxtjs/apollo": "^4.0.1-rc.5",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.19.3",
+    "graphql-tag": "^2.12.6",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
